# test_gha_issue

./: .dockerignore  .ebignore  .gitignore  Dockerfile  Dockerrun.aws.dev.json  Dockerrun.aws.prod.json  README.md  cookiepatcher.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg  tox.ini  uwsgi.ini
.github/: setting-issue.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: development.yml  production.yml  scheduled-check-settings.yml  scheduled-poetry-update.yml  test.yml
test_proj/core/: middlewares.py
test_proj/healthcheck/: README.md  views.py
test_proj/healthcheck/tests/: test_views.py
test_proj/test_proj/: asgi.py  urls.py  wsgi.py
test_proj/test_proj/settings/: __init__.py  development.py  production.py  test.py
tools/check_settings/check_settings/: __main__.py  check_settings.py  detect_varnames.py  sample_python_src.py
