[tool.poetry]
authors = []
description = ""
name = "test_repo"
version = "1.0.0"
packages = [
  { include = "*", from = "test_proj" }
]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.0"
taskipy = "^1.10.1"

[[tool.poetry.source]]
name = "nikkei"
url = "https://pypi.n8s.jp/9c346c40-7d2f-473e-9580-d41ee07d25ea/packages/simple/"
priority = "default"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
exclude = '''
(
    htmlcov
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
    | migrations
)
'''
line-length = 88

[tool.isort]
profile = "black"
src_paths = ["test_proj"]

[tool.coverage.report]
include = ["test_proj/**"]
omit = [
  "test_proj/*/tests/**",
  "test_proj/*/tests.py",
  "test_proj/test_proj/settings/**",
]
skip_covered = true

[tool.taskipy.tasks]
createsuperuser = "python test_proj/manage.py createsuperuser"
format = '''
isort test_proj/
black test_proj/
'''
migrate = "python test_proj/manage.py migrate"
runserver = "python test_proj/manage.py runserver"
sort-import = "isort test_proj/ --diff"
check-settings = "PYTHONPATH=tools/check_settings python -m check_settings test_proj/test_proj/settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
